--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bahmutov/cypress-universal-test#readme",
   "devDependencies": {
-    "cypress": "5.6.0"
+    "cypress": "5.6.0",
+    "raw-loader": "4.0.2"
   }
 }
