--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bahmutov/cypress-universal-test#readme",
   "devDependencies": {
     "cypress": "5.6.0",
+    "globby": "11.0.1",
     "raw-loader": "4.0.2"
   }
 }
